--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(smallpt)
 
 set(CMAKE_CXX_STANDARD 17)
 
+find_package (Threads)
+
 add_executable(smallpt main.cpp)
+
+target_link_libraries (smallpt Threads::Threads)
