refactor: rewrite recursive trace() into iterative loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-project(smallpt)
+
+set(PROJ_NAME "smallpt-cpu")
+
+project(${PROJ_NAME})
 
 set(CMAKE_CXX_STANDARD 17)
 
-find_package (Threads)
+find_package(Threads)
 
-add_executable(smallpt main.cpp)
+add_executable(${PROJ_NAME} src/main.cpp)
 
-target_link_libraries (smallpt Threads::Threads)
+target_link_libraries(${PROJ_NAME} Threads::Threads)
